--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "react-select": "^3.2.0",
     "redoc": "^2.0.0-rc.48",
     "slugify": "^1.4.7",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
